[package]
name = "fcast"
version = "0.1.0"
authors = ["Anooj Patel <anooj.r.patel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2.22", features = ["full"] }
serde_json = "1.0.59"